# grasp

./: Makefile  dsl.py  ensure_tests_transpiled.py  ensure_transpiler_ready.py  example_source_dsl.py  framework_datalog.py  grammar.lark  grammar2.lark  parser.py  pyproject.toml  requirements.txt  transpile.py  transpiler.sql
grasp/: parser.py
misc/: dsl.py  example_source_dsl.py
scripts/: compile_and_run_tests.py  ensure_tests_transpiled.py  ensure_transpiler_ready.py  util.py
scripts/test/.grasp_cache/: basic.7ec5c791a2.sql
src/grasp/: cli.py  parser.py  util.py
src/grasp/scripts/: compile_and_run_tests.py  ensure_tests_transpiled.py  ensure_transpiler_ready.py
test/: aggregate.test.grasp  aggregation.expected.json5  aggregation.test.grasp  basic.expected.json5  basic.test.grasp  binop.test.grasp  joins.expected.json5  joins.test.grasp  json_matching.expected.json5  json_matching.schema.json5  json_matching.test.grasp  json_matching.tg_update.input.jsonl  only_facts.expected.json5  only_facts.test.grasp  strings.expected.json5  strings.test.grasp  unnest.expected.json5  unnest.test.grasp
transpiler/: 000_schema.sql  001_udf.sql  002_validation.sql  003_codegen_preparation.sql  004_codegen.sql  999_errors.sql  udf.rs
